Get dist version working

--- a/src/app/views/base.njk
+++ b/src/app/views/base.njk
@@ -8,7 +8,9 @@
 		<link rel="shortcut icon" href="/public/img/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="/public/img/favicon-192x192.png" type="image/png">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- build:css(src) /public/css/layout.min.css -->
 		<link href="/public/css/layout.css" media="screen" rel="stylesheet">
+		<!-- endbuild -->
 		{% block head %}{% endblock -%}
 		{% block head_styles %}{% endblock -%}
 		{% block head_script %}{% endblock -%}
