--- a/src/app/views/error/default.njk
+++ b/src/app/views/error/default.njk
@@ -3,4 +3,10 @@
 {% set pageName='Error' %}
 {% block page_content %}
 Default error page
+
+{% if error && showErrors %}
+	<pre>
+		{{ error.stack }}
+	</pre>
+{% endif %}
 {% endblock %}
