--- a/src/app/views/error/default.njk
+++ b/src/app/views/error/default.njk
@@ -4,7 +4,7 @@
 {% block page_content %}
 Default error page
 
-{% if error && showErrors %}
+{% if error and showErrors %}
 	<pre>
 		{{ error.stack }}
 	</pre>
