Add timeline search page Add timeline results page Stop random tests for jasmine as it breaks them Added nunjucks filter for date Split out backend request into a service as well Update dependencies Add Hawk to talk to API Add param checking for SSO callback Add form and search results for timeline

--- a/src/app/views/error/default.njk
+++ b/src/app/views/error/default.njk
@@ -1,12 +1,22 @@
 {% extends 'layout.njk' %}
 
 {% set pageName='Error' %}
-{% block page_content %}
-Default error page
 
-{% if error and showErrors %}
-	<pre>
-		{{ error.stack }}
-	</pre>
-{% endif %}
+{% block page_content %}
+
+	<h1 class="page-heading">Error</h1>
+
+	<p class="lead">
+		{% if message %}
+			{{ message }}
+		{% else %}
+			Sorry, an unexpected error occured.
+		{% endif %}
+	</p>
+
+	{% if error and showErrors %}
+		<pre>
+			{{ error.stack }}
+		</pre>
+	{% endif %}
 {% endblock %}
