--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -7,6 +7,8 @@
 {% block head %}
 <!-- build:css(src) /public/css/app.min.css -->
 	<link rel="stylesheet" href="/public/css/main.css">
+	<link rel="stylesheet" href="/public/css/components/timeline-form.css">
+	<link rel="stylesheet" href="/public/css/components/timeline-table.css">
 <!-- endbuild -->
 {% endblock head %}
 
@@ -16,7 +18,7 @@
 		<nav class="top-nav">
 			<ul class="top-nav_list">
 				<li class="top-nav_list_item">
-					<a class="top-nav_link" href="/">Company Timeline</a>
+					<a class="top-nav_link" href="/timeline/">Timeline search</a>
 				</li>
 			</ul>
 		</nav>
