First working version of ACS Added new controller with index route to serve HTML for the page Added more methods to the controller to provide AJAX data for the page Copied all vendor JS and CSS and fonts Updated build to handle new static assets Added methods to the backend service to fetch the data required Copied all of Kristof's HTML and JS and refactored to work

--- a/src/app/views/index.njk
+++ b/src/app/views/index.njk
@@ -1,5 +1,15 @@
 {% extends 'layout.njk' %}
 {% set pageName='Homepage' %}
 {% block page_content %}
-Index page
+Welcome to the Data Science platform.
+
+Choose the service you would like to use:
+<ul>
+	<li>
+		<a href="/timeline/">Company timeline</a>
+	</li>
+	<li>
+		<a href="/acs/">Advanced company search</a>
+	</li>
+</ul>
 {% endblock %}
