--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -18,7 +18,9 @@
 		<nav class="top-nav">
 			<ul class="top-nav_list">
 				<li class="top-nav_list_item">
-					<a class="top-nav_link" href="/timeline/">Timeline search</a>
+					<a class="top-nav_link" href="/">Home</a>
+					<a class="top-nav_link" href="/timeline/">Timeline timeline</a>
+					<a class="top-nav_link" href="/acs/">Advanced company search</a>
 				</li>
 			</ul>
 		</nav>
