--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -19,7 +19,7 @@
 			<ul class="top-nav_list">
 				<li class="top-nav_list_item">
 					<a class="top-nav_link" href="/">Home</a>
-					<a class="top-nav_link" href="/timeline/">Timeline timeline</a>
+					<a class="top-nav_link" href="/timeline/">Company timeline</a>
 					<a class="top-nav_link" href="/acs/">Advanced company search</a>
 				</li>
 			</ul>
