embed google DS and power BI dashboards (#9)
Release v1.4.0

--- a/src/app/views/acs/index.njk
+++ b/src/app/views/acs/index.njk
@@ -121,6 +121,18 @@
 									</div>
 								</div>
 							</div>
+							<div class="row">
+								<div class="col-lg-4">
+									<div class="input-group">
+										<span class="input-group-addon">Service Used:</span>
+										<select name='service_usage' class="selectpicker show-menu-arrow form-control"
+										        multiple
+										        data-max-options="10" data-live-search="true"
+										        data-selected-text-format="count">
+										</select>
+									</div>
+								</div>
+							</div>
 							<br>Company Exports</br>
 							<div class="row">
 								<div class="col-lg-4">
