--- a/src/app/views/index.njk
+++ b/src/app/views/index.njk
@@ -1,15 +1,21 @@
 {% extends 'layout.njk' %}
 {% set pageName='Homepage' %}
 {% block page_content %}
-Welcome to the Data Science platform.
+Welcome to the Data Hub Labs.
 
 Choose the service you would like to use:
 <ul>
 	<li>
-		<a href="/timeline/">Company timeline</a>
+		<a href="/timeline/">Company Timeline</a>
 	</li>
 	<li>
-		<a href="/acs/">Advanced company search</a>
+		<a href="/acs/">Company Finder</a>
+	</li>
+	<li>
+		<a href="/google-dashboard/">GoogleDS Dashboard</a>
+	</li>
+	<li>
+		<a href="/powerbi-dashboard/">PowerBI Dashboard</a>
 	</li>
 </ul>
 {% endblock %}
