--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="/public/css/main.css">
 	<link rel="stylesheet" href="/public/css/components/timeline-form.css">
 	<link rel="stylesheet" href="/public/css/components/timeline-table.css">
+	<link rel="stylesheet" href="/public/css/powerbi-dashboard.css">
 <!-- endbuild -->
 {% endblock head %}
 
@@ -19,8 +20,10 @@
 			<ul class="top-nav_list">
 				<li class="top-nav_list_item">
 					<a class="top-nav_link" href="/">Home</a>
-					<a class="top-nav_link" href="/timeline/">Company timeline</a>
-					<a class="top-nav_link" href="/acs/">Advanced company search</a>
+					<a class="top-nav_link" href="/timeline/">Company Timeline</a>
+					<a class="top-nav_link" href="/acs/">Company Finder</a>
+					<a class="top-nav_link" href="/google-dashboard/">GoogleDS Dashboard</a>
+					<a class="top-nav_link" href="/powerbi-dashboard/">PowerBI Dashboard</a>
 				</li>
 			</ul>
 		</nav>
