--- a/src/app/views/_generic.njk
+++ b/src/app/views/_generic.njk
@@ -22,12 +22,8 @@
     {% block styles %}{% endblock %}
 {% endblock %}
 
-{# Turn the header and footer off #}
-{#{% block header %}{% endblock %}#}
-{#{% block footer %}{% endblock %}#}
-
 {% block bodyEnd %}
-    <script src="/public/all.js"></script>
+    <script src="/public/js/all.js"></script>
     <script>window.GOVUKFrontend.initAll()</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/3.5.15/iframeResizer.min.js"></script>
     <!--[if lte IE 8]>
@@ -36,6 +32,15 @@
     <script type="text/javascript">
       var domReady = function(a,b,c){b=document,c='addEventListener';b[c]?b[c]('DOMContentLoaded',a):window.attachEvent('onload',a)}
       domReady(iFrameResize({}, '.js-component-preview'))
+    </script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', '{{ analyticsId }}', 'auto');
+      ga('send', 'pageview');
     </script>
     {% block scripts %}{% endblock %}
 {% endblock %}
