changes to server config to be able to use dev with any IDE

--- a/src/public/scss/styles.scss
+++ b/src/public/scss/styles.scss
@@ -1,53 +1,4 @@
 @import "govuk-frontend/all";
+@import "utilities";
 
-
-.app-filter-group-heading {
-  background-color: govuk-colour("grey-3");
-  padding: 10px;
-}
-
-.app-filter-group-list {
-  background-color: white;
-  border-style: solid;
-  border-color: govuk-colour("grey-3");
-  padding: 10px;
-  border-top: 0px;
-  height: 8.5em;
-  overflow-y: scroll;
-}
-
-.app-filter-group-details {
-  margin-bottom: 0;
-}
-
-.app-collection-item {
-  position: relative;
-}
-
-.app-pull-right {
-  float: right;
-}
-
-.app-badge {
-  position: absolute;
-  top: 0;
-  right: 0;
-  border: 2px solid govuk-colour("grey-3");
-  border-radius: 4px;
-  padding: 2px 5px;
-}
-
-.app-form-group-no-margin {
-  .govuk-form-group {
-    margin-bottom: 0;
-  }
-}
-
-.app-sort-select {
-  width: auto;
-}
-
-.app-large-section-break {
-  border-bottom: 5px solid govuk-colour("black");
-}
-
+@import "../../app/components/render-collection/render-collection";
