--- a/src/app/views/acs/index.njk
+++ b/src/app/views/acs/index.njk
@@ -37,7 +37,7 @@
             </form>
         </div>
         <div class="govuk-grid-column-two-thirds">
-            {{ renderCollection({}) }}
+            {{ renderCollection(result) }}
         </div>
     </div>
 {% endblock %}
